--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     @import url('https://fonts.googleapis.com/css?family=Raleway:200');
 body {
   font-family: 'Raleway', sans-serif;
-  background:#fff;
+  background:#ffffff;
 }
 
 .wrapper {
